and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

07 November 14: V.Ivant (emutils-V10-00-44)
- G4LossTableMananger, G4EmConfigurator - fixed minor Coverity reports

28 October 14: V.Ivant (emutils-V10-00-43)
- removed old commented code

23 October 14: V.Ivant (emutils-V10-00-42)
- G4VMultipleScattering - fixed displacement at boundary algorithm

23 October 14: V.Ivant (emutils-V10-00-40)
- G4VEmProcess, G4VEnergyLossProcess - set step limit to DBL_MAX if
    selected model is inactive at such energy; addresses bug 1674
- G4EmConfigurator - set high energy activation limit for a new
    model not more than high energy limit (needed for DNA models) 

22 October 14: V.Ivant (emutils-V10-00-39)
- G4VEmProcess - fixed definition of integral option

20 October 14: V.Ivant (emutils-V10-00-38)
- G4LossTableManager - fixed non-initilized variable
- G4VMultipleScattering - coherent definition of lateral 
    displacement flag

17 October 14: V.Ivant (emutils-V10-00-37)
- G4VEmProcess, G4VEnergyLossProcess - improved printout at 
    initialisation, added extra initialisation
- G4VEmProcess, G4VEmModel - added accessmethos for target element 
    and isotope

15 October 14: V.Ivant (emutils-V10-00-36)
15 October 14: V.Ivant (emutils-V10-00-35)
- fixed G4VEnergyLossProcess

14 October 14: V.Ivant (emutils-V10-00-34)
- fixed G4VMultipleScattering

14 October 14: V.Ivant (emutils-V10-00-33)
- fixed logic of sub-cutoff mechnism

13 October 14: V.Ivant (emutils-V10-00-32)
- fixed typo

13 October 14: V.Ivant (emutils-V10-00-31)
- G4EmParameters, G4EmParametersMessenger - new classes for 
    keeping EM parameters static for run time
- G4VEmProcess, G4VEnergyLossProcess, G4VMultipleScattering,