@@ -17,6 +17,10 @@ committal in the CVS repository !
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
+15 November 14: V.Ivant (emutils-V10-00-45)
+- G4VAtomDeexcitation - changed initialisation allowing to work in 
+    unit tests
+
 07 November 14: V.Ivant (emutils-V10-00-44)
 - G4LossTableMananger, G4EmConfigurator - fixed minor Coverity reports
 
